--- a/hands_on/mnist_interpret_hands_on.ipynb
+++ b/hands_on/mnist_interpret_hands_on.ipynb
@@ -2,23 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/srinivasan/.conda/envs/coldplay/lib/python2.7/site-packages/matplotlib/font_manager.py:273: UserWarning: Matplotlib is building the font cache using fc-list. This may take a moment.\n",
-      "  warnings.warn('Matplotlib is building the font cache using fc-list. This may take a moment.')\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import sys\n",
     "sys.path.append(\"interprettensor/interprettensor\")\n",
+    "sys.path.append(\"interprettensor/interprettensor/modules\")\n",
     "from modules.sequential import Sequential\n",
     "from modules.linear import Linear\n",
     "from modules.softmax import Softmax\n",
@@ -38,43 +30,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Successfully downloaded train-images-idx3-ubyte.gz 9912422 bytes.\n",
-      "Extracting data/train-images-idx3-ubyte.gz\n",
-      "Successfully downloaded train-labels-idx1-ubyte.gz 28881 bytes.\n",
-      "Extracting data/train-labels-idx1-ubyte.gz\n",
-      "Successfully downloaded t10k-images-idx3-ubyte.gz 1648877 bytes.\n",
-      "Extracting data/t10k-images-idx3-ubyte.gz\n",
-      "Successfully downloaded t10k-labels-idx1-ubyte.gz 4542 bytes.\n",
-      "Extracting data/t10k-labels-idx1-ubyte.gz\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "#################################################################################\n",
-    "'''\n",
-    "Data is downloaded as an mnist object\n",
-    "At every iteration, the batch of images are read from the dataset \n",
-    "'''\n",
-    "#################################################################################\n",
-    "batch_size = 100\n",
-    "mnist = input_data.read_data_sets('data', one_hot=True)\n",
-    "def get_mnist_batch(mnist, train):\n",
-    "    if train:\n",
-    "        xs, ys = mnist.train.next_batch(batch_size)\n",
-    "        #k = FLAGS.dropout\n",
-    "    else:\n",
-    "        xs, ys = mnist.test.next_batch(batch_size)\n",
-    "        #k = 1.0\n",
-    "    return (2*xs)-1, ys"
+    "def init_vars(sess):\n",
+    "    saver = tf.train.Saver()\n",
+    "    tf.global_variables_initializer().run()\n",
+    "    ckpt = tf.train.get_checkpoint_state(FLAGS.checkpoint_dir)\n",
+    "    try: \n",
+    "        if ckpt and ckpt.model_checkpoint_path:\n",
+    "            print('Reloading from -- '+FLAGS.checkpoint_dir+'/model.ckpt')\n",
+    "            saver.restore(sess, ckpt.model_checkpoint_path)\n",
+    "        else:\n",
+    "            tvars = np.load('mnist_linear_model/model.npy')\n",
+    "            for ii in range(8): sess.run(tf.trainable_variables()[ii].assign(tvars[ii]))\n",
+    "            print('Reloading from numpy array!')\n",
+    "    except:\n",
+    "        raise ValueError('Layer definition and model layers mismatch!')\n",
+    "    return saver\n",
+    "    "
    ]
   },
   {
@@ -92,9 +69,14 @@
     "Output: 10-d tensor for each image\n",
     "'''\n",
     "#################################################################################\n",
-    "def neural_network(ip):\n",
+    "def neural_network():\n",
     "    # Define the layers for your neural network \n",
-    "    \n",
+    "    return Sequential([Linear(input_dim=784,output_dim=1296, act='relu', batch_size=FLAGS.batch_size),                    \n",
+    "                     Linear(1296, act='relu'), \n",
+    "                     Linear(1296, act='relu'),\n",
+    "                     Linear(10),\n",
+    "                     Softmax()])\n",
+    "\n",
     "    '''Fill your code here'''\n",
     "                   \n",
     "    return op\n"
@@ -102,206 +84,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#################################################################################\n",
-    "'''\n",
-    "Create Graph first by defining placeholders, ops, loss functions and optimizers\n",
-    "\n",
-    "'''\n",
-    "#################################################################################\n",
-    "\n",
+    "if tf.gfile.Exists(FLAGS.summaries_dir):\n",
+    "    tf.gfile.DeleteRecursively(FLAGS.summaries_dir)\n",
+    "tf.gfile.MakeDirs(FLAGS.summaries_dir)\n",
     "tf.reset_default_graph()\n",
-    "#################################################################################\n",
-    "'''Placeholders'''\n",
-    "#################################################################################\n",
-    "with tf.variable_scope('inputs'):\n",
-    "    inputs = tf.placeholder(tf.float32, shape=[None,784])\n",
-    "with tf.variable_scope('ground_truth'):\n",
-    "    ground_truth= tf.placeholder(tf.float32, shape=[None,10])\n",
     "\n",
-    "#################################################################################\n",
-    "'''MNIST Neural Network'''\n",
-    "#################################################################################\n",
-    "with tf.variable_scope('mnist_network'):\n",
-    "    outputs = neural_network(inputs)\n",
-    "\n",
-    "accuracy = []\n",
-    "with tf.name_scope('accuracy'):\n",
-    "    accuracy = tf.reduce_mean(tf.cast(tf.equal(tf.argmax(outputs, 1), tf.argmax(ground_truth, 1)), tf.float32))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(2.3910904, 0.111)\n",
-      "(2.2205753, 0.23799999)\n",
-      "(2.1286337, 0.36300001)\n",
-      "(2.0285382, 0.41900003)\n",
-      "(1.9288929, 0.43099999)\n",
-      "(1.8058988, 0.47700003)\n",
-      "(1.7513446, 0.493)\n",
-      "(1.6012278, 0.56999999)\n",
-      "(1.572307, 0.55599999)\n",
-      "(1.4611897, 0.61200005)\n",
-      "(1.3711312, 0.65800005)\n",
-      "(1.3359817, 0.68399996)\n",
-      "(1.2715242, 0.68199998)\n",
-      "(1.2432216, 0.68599999)\n",
-      "(1.1465908, 0.713)\n",
-      "(1.1564124, 0.68999994)\n",
-      "(1.0942676, 0.708)\n",
-      "(1.0244495, 0.722)\n",
-      "(1.0053035, 0.73399997)\n",
-      "(0.95998114, 0.74599993)\n",
-      "(0.99482358, 0.71399999)\n",
-      "(0.85450941, 0.76600003)\n",
-      "(0.89561594, 0.74599999)\n",
-      "(0.80630481, 0.78100002)\n",
-      "(0.8302635, 0.76000005)\n",
-      "(0.76365644, 0.78500009)\n",
-      "(0.77609068, 0.77899992)\n",
-      "(0.70212686, 0.80299997)\n",
-      "(0.62504482, 0.85100007)\n",
-      "(0.66325492, 0.81800002)\n",
-      "(0.58571565, 0.82499999)\n",
-      "(0.54112667, 0.86300004)\n",
-      "(0.4941605, 0.86199999)\n",
-      "(0.51700169, 0.838)\n",
-      "(0.46167737, 0.87099999)\n",
-      "(0.48288864, 0.85500002)\n",
-      "(0.41789335, 0.88699996)\n",
-      "(0.43768358, 0.87900007)\n",
-      "(0.45752832, 0.866)\n",
-      "(0.47698516, 0.86399996)\n",
-      "(0.4108097, 0.88000005)\n",
-      "(0.40736604, 0.89099997)\n",
-      "(0.42158794, 0.88000005)\n",
-      "(0.40440172, 0.88000005)\n",
-      "(0.43784344, 0.86700004)\n",
-      "(0.42846069, 0.875)\n",
-      "(0.38739482, 0.89100003)\n",
-      "(0.42043921, 0.87800002)\n",
-      "(0.38760692, 0.88300002)\n",
-      "(0.36719921, 0.898)\n",
-      "(0.3941007, 0.88699996)\n",
-      "(0.3945221, 0.88700008)\n",
-      "(0.32638764, 0.90500003)\n",
-      "(0.38035679, 0.89100003)\n",
-      "(0.35718644, 0.89200002)\n",
-      "(0.38461107, 0.88300002)\n",
-      "(0.36732697, 0.89400005)\n",
-      "(0.33334997, 0.89799994)\n",
-      "(0.30399951, 0.89400005)\n",
-      "(0.33666265, 0.917)\n",
-      "(0.37277067, 0.89900005)\n",
-      "(0.36572269, 0.90400004)\n",
-      "(0.35352153, 0.89100015)\n",
-      "(0.33009583, 0.89599997)\n",
-      "(0.31734839, 0.90400004)\n",
-      "(0.30766883, 0.91900003)\n",
-      "(0.30925292, 0.917)\n",
-      "(0.34351665, 0.90400004)\n",
-      "(0.3484441, 0.90600008)\n",
-      "(0.30418375, 0.912)\n",
-      "(0.29806048, 0.91400003)\n",
-      "(0.35674849, 0.88999999)\n",
-      "(0.32366338, 0.90100008)\n",
-      "(0.31916955, 0.90500003)\n",
-      "(0.26252329, 0.92800003)\n",
-      "(0.33317775, 0.90100002)\n",
-      "(0.29365844, 0.91200006)\n",
-      "(0.31590667, 0.90500009)\n",
-      "(0.29891297, 0.91299999)\n",
-      "(0.32948089, 0.90800005)\n",
-      "(0.31802157, 0.90700001)\n",
-      "(0.2857379, 0.91600001)\n",
-      "(0.2872262, 0.91300011)\n",
-      "(0.28659612, 0.917)\n",
-      "(0.31439692, 0.91200006)\n",
-      "(0.26409838, 0.93100005)\n",
-      "(0.29229987, 0.91499996)\n",
-      "(0.28532991, 0.91400003)\n",
-      "(0.29186445, 0.92500007)\n",
-      "(0.24136563, 0.92800009)\n",
-      "(0.28073022, 0.92500007)\n",
-      "(0.27000311, 0.93000001)\n",
-      "(0.25177702, 0.92700005)\n",
-      "(0.25511312, 0.9230001)\n",
-      "(0.25334641, 0.92299998)\n",
-      "(0.26840723, 0.92000008)\n",
-      "(0.25002614, 0.93600005)\n",
-      "(0.26555431, 0.93099999)\n",
-      "(0.24354655, 0.94000012)\n",
-      "(0.2899406, 0.90900004)\n"
-     ]
-    }
-   ],
-   "source": [
     "#################################################################################\n",
     "'''\n",
-    "Create a TF session and execute the graph\n",
-    "\n",
+    "Define the graph\n",
     "'''\n",
     "#################################################################################\n",
+    "mnist = input_data.read_data_sets(FLAGS.data_dir, one_hot=True)\n",
     "\n",
     "with tf.Session() as sess:\n",
-    "    \n",
+    "    x = tf.placeholder(tf.float32, [FLAGS.batch_size, 784], name='input')\n",
+    "    with tf.variable_scope('model'):\n",
+    "        my_netowrk = neural_network()\n",
+    "        output = my_netowrk.forward(x)\n",
+    "        \n",
+    "        #################################################################################\n",
+    "        '''Compute LRP'''\n",
+    "        #################################################################################\n",
+    "        RELEVANCE = '''Fill your code here'''\n",
+    "\n",
     "    # Merge all the summaries and write them out \n",
     "    merged = tf.summary.merge_all()\n",
-    "    train_writer = tf.summary.FileWriter(FLAGS.summaries_dir + '/train', sess.graph)\n",
-    "    test_writer = tf.summary.FileWriter(FLAGS.summaries_dir + '/test')\n",
+    "    test_writer = tf.summary.FileWriter(FLAGS.summaries_dir + '/my_model')\n",
     "\n",
-    "    # initialize all the variables - this assigns the values to the variables\n",
-    "    tf.global_variables_initializer().run()\n",
-    "    \n",
-    "    utils = Utils(sess, FLAGS.checkpoint_dir)\n",
-    "    if FLAGS.reload_model:\n",
-    "        utils.reload_model()\n",
-    "    \n",
-    "    max_steps = 100\n",
-    "    for i in range(max_steps):\n",
-    "        # read data from mnist dataset and get a batch\n",
-    "        input_, gt_ = get_mnist_batch(mnist, train=True)\n",
-    "    \n",
-    "        # The dictionary assigns the numerical values to the placeholders\n",
-    "        values_dict = {inputs:input_, ground_truth:gt_}\n",
-    "        fetch_values = [optimizer, loss, accuracy]\n",
-    "        #################################################################################\n",
-    "        '''\n",
-    "        Run a session to execute the graph\n",
-    "        sess.run() should consist of 'fetch' and 'feed' \n",
-    "        fetch: are the list of variables to be returned\n",
-    "        feed: is the dictionary of values assigned to respective placeholders\n",
-    "        '''\n",
-    "        #################################################################################\n",
-    "        \n",
-    "        '''Fill your code here'''\n",
-    "        \n",
-    "        if i%10==0:\n",
-    "            print(\"Accuracy at step %d: %g\"%(i, accuracy))\n",
-    "            #plt.imshow(input_[0].reshape([28,28]));plt.show()\n",
-    "            \n",
-    "    # Additionally, it is a good practice to save your trained model\n",
-    "    # Define the saver and save your model \n",
-    "    # Bonus of 0.05 accuracy for saving the model\n",
-    "    \n",
-    "        '''Fill your code here'''\n",
-    "    \n",
-    "    \n",
-    "        "
+    "    # Intialize variables and reload your model\n",
+    "    saver = init_vars(sess)\n",
+    "\n",
+    "    # Extract testing data \n",
+    "    xs, ys = mnist.test.next_batch(FLAGS.batch_size)\n",
+    "    feed = {x:(2*xs)-1}\n",
+    "    fetch = [merged, RELEVANCE]\n",
+    "    #################################################################################\n",
+    "    '''Run the session and fetch the relevances'''\n",
+    "    #################################################################################\n",
+    "    summary, relevance_test= '''Fill your code here'''\n",
+    "    test_writer.add_summary(summary, 0)\n",
+    "\n",
+    "    # Save the images as heatmaps to visualize on tensorboard\n",
+    "    images = xs.reshape([FLAGS.batch_size,28,28,1])\n",
+    "    images = (images + 1)/2.0\n",
+    "    plot_relevances(relevance_test.reshape([FLAGS.batch_size,28,28,1]), images, test_writer )\n",
+    "\n",
+    "    test_writer.close()\n",
+    "    print('Completed plotting - Check Tensorboard')"
    ]
   },
   {
@@ -317,21 +152,9 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 2",
    "language": "python",
    "name": "python2"
-  },
-  "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 2
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
-   "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.13"
   }
  },
  "nbformat": 4,
