--- a/hands_on/mnist_hands_on.ipynb
+++ b/hands_on/mnist_hands_on.ipynb
@@ -3,16 +3,23 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Imported\n"
+     ]
+    }
+   ],
    "source": [
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "\n",
     "from IPython.display import clear_output, Image, display, HTML\n",
-    "from tensorflow.examples.tutorials.mnist import input_data #import input_data"
+    "from tensorflow.examples.tutorials.mnist import input_data #import input_data\n",
+    "print('Imported')"
    ]
   },
   {
@@ -38,15 +45,13 @@
     "At every iteration, the batch of images are read from the dataset \n",
     "'''\n",
     "#################################################################################\n",
-    "batch_size = 100\n",
+    "batch_size = 20\n",
     "mnist = input_data.read_data_sets('data', one_hot=True)\n",
     "def get_mnist_batch(mnist, train):\n",
     "    if train:\n",
     "        xs, ys = mnist.train.next_batch(batch_size)\n",
-    "        #k = FLAGS.dropout\n",
     "    else:\n",
     "        xs, ys = mnist.test.next_batch(batch_size)\n",
-    "        #k = 1.0\n",
     "    return (2*xs)-1, ys"
    ]
   },
@@ -259,11 +264,10 @@
     "        '''\n",
     "        #################################################################################\n",
     "        \n",
-    "        '''Fill your code here'''\n",
+    "        _, loss_, accuracy_ = '''Fill your code here'''\n",
     "        \n",
     "        if i%10==0:\n",
-    "            print(\"Accuracy at step %d: %g\"%(i, accuracy))\n",
-    "            #plt.imshow(input_[0].reshape([28,28]));plt.show()\n",
+    "            print(\"Accuracy at step %d: %g\"%(i, accuracy_))\n",
     "            \n",
     "    # Additionally, it is a good practice to save your trained model\n",
     "    # Define the saver and save your model \n",
@@ -302,7 +306,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
