--- a/hands_on/style_transfer_hands_on.ipynb
+++ b/hands_on/style_transfer_hands_on.ipynb
@@ -27,7 +27,8 @@
     "flags.DEFINE_float(\"style_loss_weight\",1e-3, \"\")\n",
     "flags.DEFINE_integer(\"max_steps\",100, \"\")\n",
     "flags.DEFINE_float(\"learning_rate\",0.1, \"\")\n",
-    "FLAGS = flags.FLAGS\n"
+    "FLAGS = flags.FLAGS\n",
+    "print('Imported')"
    ]
   },
   {
@@ -360,7 +361,7 @@
     "# Define the output tensor as a Variable - so we can train it\n",
     "# The output tensor should be initialized with the content image\n",
     "#################################################################################\n",
-    "'''Output Tensor - this is our output image which we will train'''\n",
+    "'''Output Tensor - initialize with content image - which we will train'''\n",
     "#################################################################################    \n",
     "output_tensor = tf.Variable('''Fill your code here''') #shape=[1,224,224,3] \n",
     "    \n",
@@ -405,7 +406,7 @@
     "    # MSE of the activations \n",
     "    mse = tf.losses.mean_squared_error(content_end_points[layer], output_end_points[layer])\n",
     "    # Add it to the content_loss \n",
-    "    content_loss.append(mse)\n",
+    "    content_loss += mse\n",
     "        \n",
     "# Style loss\n",
     "style_loss = 0\n",
@@ -449,7 +450,7 @@
     "sess = tf.Session()\n",
     "\n",
     "'''Initialize and loading the weights'''\n",
-    "Initialize the variables and load the weights for VGG\n",
+    "#Initialize the variables and load the weights for VGG\n",
     "sess.run(tf.global_variables_initializer())\n",
     "vgg.load_weights(FLAGS.models_path,sess)\n",
     "    \n",
@@ -469,7 +470,7 @@
     "    _, loss, c_loss, s_loss, output_image = '''Fill your code here'''\n",
     "    print('Iteration : %4d, total_loss : %g, content_loss : %g, style_loss : %g' % (i,loss, c_loss, s_loss))\n",
     "    if i%10==0:\n",
-    "        plt.imshow(np.hstack([content_image[0],output_image[0],style_image[0] ])/255.); plt.show()\n",
+    "        plt.imshow(np.hstack([content_image[0],output_image[0],style_image[0] ])/output_image.max()); plt.show()\n",
     "    print('Completed')\n"
    ]
   }
@@ -491,7 +492,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.4.3"
   }
  },
  "nbformat": 4,
