final solutions added

--- a/hello_world/xor_interprettensor.ipynb
+++ b/hello_world/xor_interprettensor.ipynb
@@ -9,7 +9,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3.4.3 (default, Nov 17 2016, 01:08:31) \n",
+      "3.4.3 (default, Nov 28 2017, 16:41:13) \n",
       "[GCC 4.8.4]\n",
       "Imported\n"
      ]
@@ -114,7 +114,7 @@
     "with tf.variable_scope('model'):\n",
     "    nn = neural_network()\n",
     "    output = nn.forward(ab)\n",
-    "    relevances = nn.lrp(output)\n",
+    "    relevances = nn.lrp(output,'epsilon',0.5)\n",
     "#print(ab,hidden_layer,output)\n",
     "\n",
     "# Define loss function and optimizers\n",
@@ -135,7 +135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "999 1.6943e-05\n"
+      "999 1.88172e-05\n"
      ]
     }
    ],
@@ -171,10 +171,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input - a: 0:, b: 0 - output: 0.000572218 - relevances_a: 0, relevances_b: 0\n",
-      "Input - a: 0:, b: 1 - output: 0.998759 - relevances_a: 0, relevances_b: 0.839912\n",
-      "Input - a: 1:, b: 0 - output: 0.999396 - relevances_a: 1.90762, relevances_b: 0\n",
-      "Input - a: 1:, b: 1 - output: 0.00809571 - relevances_a: 0, relevances_b: 0\n"
+      "Input - a: 0:, b: 0 - output: 3.20653e-07 - relevances_a: 0, relevances_b: 0\n",
+      "Input - a: 0:, b: 1 - output: 0.999914 - relevances_a: 0, relevances_b: 1.88671\n",
+      "Input - a: 1:, b: 0 - output: 0.999292 - relevances_a: 1.82784, relevances_b: 0\n",
+      "Input - a: 1:, b: 1 - output: 0.00864643 - relevances_a: 0, relevances_b: 0\n"
      ]
     }
    ],
