--- a/hello_world/xor.ipynb
+++ b/hello_world/xor.ipynb
@@ -100,8 +100,8 @@
     "    tf.global_variables_initializer().run()\n",
     "    \n",
     "    # Create the XOR table\n",
-    "    input_ = np.array([[-1,-1],[-1,1],[1,-1],[1,1]]).reshape([4,2])\n",
-    "    gt_ = np.array([-1,1,1,-1]).reshape([4,1])\n",
+    "    input_ = np.array([[0,0],[0,1],[1,0],[1,1]]).reshape([4,2])\n",
+    "    gt_ = np.array([0,1,1,0]).reshape([4,1])\n",
     "    \n",
     "    # The dictionary assigns the numerical values to the placeholders\n",
     "    values_dict = {ab:input_, ground_truth:gt_}\n",
