--- a/hello_world/xor_interprettensor.ipynb
+++ b/hello_world/xor_interprettensor.ipynb
@@ -135,7 +135,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "999 1.88172e-05\n"
+      "999 2.54209e-05\n"
      ]
     }
    ],
@@ -171,10 +171,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Input - a: 0:, b: 0 - output: 3.20653e-07 - relevances_a: 0, relevances_b: 0\n",
-      "Input - a: 0:, b: 1 - output: 0.999914 - relevances_a: 0, relevances_b: 1.88671\n",
-      "Input - a: 1:, b: 0 - output: 0.999292 - relevances_a: 1.82784, relevances_b: 0\n",
-      "Input - a: 1:, b: 1 - output: 0.00864643 - relevances_a: 0, relevances_b: 0\n"
+      "Input - a: 0:, b: 0 - output: 0.00709265 - relevances_a: 0, relevances_b: 0\n",
+      "Input - a: 0:, b: 1 - output: 0.999453 - relevances_a: 0, relevances_b: 1.08766\n",
+      "Input - a: 1:, b: 0 - output: 0.999121 - relevances_a: 1.22641, relevances_b: 0\n",
+      "Input - a: 1:, b: 1 - output: 0.00709265 - relevances_a: 0, relevances_b: 0\n"
      ]
     }
    ],
